Bug 342744 - Put into trash and delete mail should not have the same icon
Summary: Put into trash and delete mail should not have the same icon
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.14.2
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-11 19:53 UTC by Matthias Mailänder
Modified: 2015-01-19 19:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 14.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Mailänder 2015-01-11 19:53:16 UTC
This is just a small usability pitfall.

Reproducible: Always

Steps to Reproduce:
1. Switch to the KMail window
2. The Trash folder is still selected
3. You wonder, I already put this to the trash. Smash the trash bin button again.

Actual Results:  
Oh no, I deleted the e-Mail. I usually want to keep everything (in the trash bin).

Expected Results:  
Isn't the red X used to delete things everywhere else on the KDE environment.

Even the position of the delete/trash button is quite the same across folders.
Comment 1 Laurent Montel 2015-01-19 12:54:35 UTC
Git commit b9c968879800dac0d9db48e4526bdb515f550783 by Montel Laurent.
Committed on 19/01/2015 at 12:53.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 342744 - Put into trash and delete mail should not have the same icon

FIXED-IN: 14.12.2

M  +2    -1    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/b9c968879800dac0d9db48e4526bdb515f550783
Comment 2 Matthias Mailänder 2015-01-19 19:33:06 UTC
Thanks!