Fix Bug 342744 - Put into trash and delete mail should not have the same icon

FIXED-IN: 14.12.2
BUG: 342744